--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -70,10 +70,9 @@ border: solid 2px #000000;
 }
 
 .navbar-absolute{
-position: absolute;
-right: 10px;
-top: 30px;
-width: 100%;
+    position: absolute;
+    right: 10px;
+    top: 10px;
 }
 
 .date-input{
@@ -96,10 +95,10 @@ background-repeat: no-repeat;
 }
 
 .vertical-center-form{
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+height: 100vh;
+display: flex;
+flex-direction: column;
+justify-content: center;
 }
 
 /*home*/
@@ -142,5 +141,19 @@ padding: 0px 100px;
 }
 
 .text-right{
-    text-align: right;
+text-align: right;
 }
+
+
+.timer{
+border: solid 4px #333330;
+border-radius: 50%;
+width: 250px;
+height: 250px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+font-size: 35px;
+}
+
