--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,7 +39,7 @@ font-family: "Anton", sans-serif;
 font-weight: 400;
 font-style: normal;
 text-transform: uppercase;
-padding: 6px 20px;
+padding: 3px 20px;
 display: inline-block;
 color: inherit;
 text-decoration: none;
@@ -47,6 +47,7 @@ font-size: 1.4rem;
 text-align: center;
 }
 
+/*buttons*/
 .btn-outline{
 border:solid 2px #000000;
 }
@@ -61,18 +62,37 @@ color: #ffffff;
 background-color: #ffffff;
 color: #000000;
 border: solid 2px #000000;
+border-radius: 6px;
+}
+
+.btn-select-option:hover{
+background-color: #24A2E8;
+border: solid 2px #24A2E8;
+color: #ffffff;
 }
 
 .btn-select-option:focus{
-background-color: blue;
+background-color: #24A2E8;
 color: #ffffff;
 border: solid 2px #000000;
 }
 
+/*inputs*/
+.is-invalid{
+border: solid 1px #dc3545;
+border-radius: 7px;
+}
+
+
+/*navbar*/
 .navbar-absolute{
-    position: absolute;
-    right: 10px;
-    top: 10px;
+position: absolute;
+right: 10px;
+top: 10px;
+}
+.navbar-expand .navbar-nav .dropdown-menu {
+position: absolute;
+left: -40px;
 }
 
 .date-input{
@@ -95,17 +115,58 @@ background-repeat: no-repeat;
 }
 
 .vertical-center-form{
+width: 70%;
 height: 100vh;
 display: flex;
 flex-direction: column;
 justify-content: center;
 }
 
-/*home*/
+.input-group-text {
+background-color: transparent;
+}
+
+.br-0{
+border-right: 0px;
+}
+
+/*image bg*/
 .home-bg-image{
 background-image: url('./assets/images/app_home_1.jpg');
 }
+.signup-bg-image{
+background-image: url('./assets/images/app_signup_image.jpg');
+}
+.signin-bg-image{
+background-image: url('./assets/images/app_signin_image.jpg');
+}
+.workout-bg-image{
+background-image: url('./assets/images/app_selectworkout_image.jpg'); 
+}
+.welcome-bg-image{
+background-image: url('./assets/images/app_welcome_image.jpg');    
+}
+.level-bg-image{
+background-image: url('./assets/images/app_levelform_image.jpg'); 
+}
+.goal-bg-image{
+background-image: url('./assets/images/app_goalform_image.jpg'); 
+}
+.gender-bg-image{
+background-image: url('./assets/images/app_genderform_image.jpg'); 
+}
+.selectworkout-bg-image{
+background-image: url('./assets/images/app_selectworkout_image.jpg'); 
+}
 
+.bg-image-border{
+border-radius: 0px 40px 0px 0px;
+}
+.bg-image-left-border{
+border-radius: 40px 0px 0px 0px;
+}
+
+/*home*/
 .col-left{
 width: 60%;
 height: 100vh;
@@ -118,6 +179,10 @@ width: 40%;
 .col-50{
 width: 50%;
 height: 100vh;  
+}
+
+.div-image-border-radius{
+display: none;
 }
 
 /* profile */
@@ -139,20 +204,20 @@ color: #7d7d7d;
 }
 
 .profile-link:hover{
-    color: #000000;
-    }
+color: #000000;
+}
 
 .border-right{
-    border-right: solid 1px #d8d8d8;
-    padding-right: 0px;
+border-right: solid 1px #d8d8d8;
+padding-right: 0px;
 }
 
 .profile-active-item{
-    border-right:2px solid #24A2E8;
-    color: #000000;
+border-right:2px solid #24A2E8;
+color: #000000;
 }
 
-.text-container{
+.home-text-container{
 padding: 0px 100px;
 }
 
@@ -171,6 +236,135 @@ flex-direction: column;
 justify-content: center;
 align-items: center;
 font-size: 35px;
+}
+
+.relative{
+position: relative;
+}
+
+.form-w{
+width: 70%;
+margin:auto;
+}
+
+a {
+color: #24A2E8;
+text-decoration: underline;
+}
+
+.br-l{
+border-radius: 6px 0px 0px 6px;
+}
+.br-r{
+border-radius: 0px 6px 6px 0px;
+}
+
+.btn:hover {
+color: var(--bs-btn-hover-color);
+background-color: #156895;
+border-color: #156895;
+}
+.btn-check:checked+.btn, .btn.active, .btn.show, .btn:first-child:active, :not(.btn-check)+.btn:active {
+color: var(--bs-btn-active-color);
+background-color: #24A2E8;
+border-color: #24A2E8;
+}
+.alert{
+padding: 5px!important;
+}
+
+/*Querys*/
+@media only screen and (max-width: 1200px) {
+.home-text-container {
+padding: 0px 60px;
+}
+.vertical-center-form{
+width: 70%;
+}
+}
+
+
+@media only screen and (max-width: 991px) {
+body {
+min-height: auto;
+}
+.columns{
+flex-direction: column;
+}
+
+.col-left, .col-right{
+width: 100%;
+}
+
+.col-image{
+height: 300px;
+}    
+.div-image-border-radius{
+display: block;
+position: absolute;
+height: 40px;
+width: 100%;
+background-color: #ffffff;
+bottom: 0px;
+border-radius: 30px 30px 0px 0px;
+}
+
+.home-text-container{
+padding: 20px 50px 30px 50px;
+}
+
+.form-w{
+width: 250px;
+margin: auto;
+}
+.bg-image-border{
+border-radius: 0px;
+}
+
+.col-50 {
+width: 100%;
+height: auto;
+}
+.goal-bg-image, .level-bg-image, .gender-bg-image, .selectworkout-bg-image{
+height: 250px;
+}
+.m-column-reverse{
+flex-direction: column-reverse;
+}
+.vertical-center-form {
+height: auto;
+padding: 20px 0px;
+width: 40%;
+}
+.goal-bg-image{
+background-image: url('./assets/images/app_goalform_mobile_image.jpg'); 
+}
+.level-bg-image{
+background-image: url('./assets/images/app_levelform_mobile_image.jpg'); 
+}
+.gender-bg-image{
+background-image: url('./assets/images/app_genderform_mobile_image.jpg'); 
+}
+.selectworkout-bg-image{
+background-image: url('./assets/images/app_selectworkout_mobile_image.jpg'); 
+}
+
+}
+
+@media only screen and (max-width: 767px) { 
+.vertical-center-form{
+width: 70%;
+}
+}
+
+@media only screen and (max-width: 420px) {
+.form-w{
+width: 100%;
+margin: auto;
+}  
+.vertical-center-form{
+width: 80%;
+}
 }
 
 
