--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,6 +45,7 @@ color: inherit;
 text-decoration: none;
 font-size: 1.4rem;
 text-align: center;
+border-radius:6px;
 }
 
 /*buttons*/
@@ -91,8 +92,78 @@ right: 10px;
 top: 10px;
 }
 .navbar-expand .navbar-nav .dropdown-menu {
-position: absolute;
-left: -40px;
+position: relative;
+right: 0px;
+top: 0px;
+padding: 0px;
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+border: none;
+min-width: 160px;
+}
+.dropdown-item {
+    display: block;
+    width: 100%;
+    padding: 10px 0px 10px 20px;
+    clear: both;
+    font-weight: 400;
+    color: var(--bs-dropdown-link-color);
+    text-align: inherit;
+    text-decoration: none;
+    white-space: nowrap;
+    background-color: transparent;
+    border: 0;
+    border-radius: var(--bs-dropdown-item-border-radius,0);
+    transition: letter-spacing 0.3s ease;
+}
+.dropdown-item:hover {
+    color: #f8f9fa;
+    background-color: #24a2e8;
+    letter-spacing: 1.5px;
+}
+#basic-nav-dropdown{
+    min-width: 160px;
+}
+
+/*workout*/
+/* Estilos para el elemento select */
+.select-custom {
+-webkit-appearance: none;
+-moz-appearance: none;
+appearance: none; 
+padding: 10px;
+border: 1px solid #ccc;
+border-radius: 5px; 
+background-color: #fff; 
+font-size: 16px;
+width: 100%; 
+cursor: pointer;
+outline: none;
+}
+
+.select-custom option {
+padding: 10px; 
+font-size: 24px; 
+background-color: #fff;
+color: #333;
+}
+
+.select-custom option:hover {
+background-color: #f5f5f5;
+}
+
+.select-custom option:checked {
+background-color: #007bff; 
+color: #fff; 
+}
+
+.form-select:focus {
+border-color: inherit;
+outline: 0;
+box-shadow: inherit;
+}
+  
+.svg-fill{
+    fill:#24a2e8;
 }
 
 .date-input{
@@ -236,6 +307,9 @@ flex-direction: column;
 justify-content: center;
 align-items: center;
 font-size: 35px;
+letter-spacing: 2.5px;
+font-family: "Anton", sans-serif;
+margin:auto;
 }
 
 .relative{
@@ -272,6 +346,31 @@ border-color: #24A2E8;
 .alert{
 padding: 5px!important;
 }
+
+/*spinner*/
+.spinner {
+    width: 100%;
+    height: 100%;
+    border: 8px solid rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+    border-top-color: #24a2e8;
+    animation: spin 10s infinite linear;
+    position: absolute;
+    top: 0px;
+    left: 0px; 
+    display: none;   
+}
+  
+  .spinner.active {
+    display: block; /* Muestra el spinner cuando isActive y !isPaused */
+  }
+  
+  @keyframes spin {
+    to {
+        transform: rotate(2turn);
+    }
+  }
+  
 
 /*Querys*/
 @media only screen and (max-width: 1200px) {
