--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -371,6 +371,28 @@ padding: 5px!important;
     }
   }
   
+/*Chat Page*/
+.roomListHeader{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.roomListHeader button{
+    padding: 0px;
+    border: none;
+    background-color: transparent;
+}
+.chatRoom{
+    background-color: #F8F8F8;
+    padding: 20px;
+    border-radius: 20px;
+}
+.no-button, .no-button:hover{
+    padding: 0px;
+    border: none;
+    color: #000000;
+    background-color: transparent;
+}
 
 /*Querys*/
 @media only screen and (max-width: 1200px) {
