--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,7 +35,7 @@ font-style: normal;
 }
 
 body {
-font-family: "Inter", sans-serif;
+    font-family: "Outfit", sans-serif;
 margin: 0 auto;
 /* display: flex; */
 place-items: center;
