--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -35,13 +35,14 @@ font-style: normal;
 }
 
 body {
-    font-family: "Outfit", sans-serif;
+font-family: "Outfit", sans-serif;
 margin: 0 auto;
 /* display: flex; */
 place-items: center;
 min-height: 100vh;
 /* height: calc(100vh - 72px); */
 width: 100%;
+color: #000000;
 }
 
 .uppercase{
@@ -61,6 +62,31 @@ font-size: 1.4rem;
 text-align: center;
 border-radius:6px;
 }
+
+/*new buttons*/
+.blue-button{
+    border:solid 2px #217FC9!important;
+    background-color: #217FC9!important;
+    color: #ffffff!important;
+}
+.outline-button{
+    border:solid 2px #000000!important;
+    background-color: #ffffff!important;
+    color: #000000!important;
+}
+
+.outline-button:hover{
+    border:solid 2px #000000!important;
+    background-color: #000000!important;
+    color: #ffffff!important;
+}
+
+.blue-button:hover{
+    border:solid 2px #1f68b6!important;
+    background-color: #1f68b6!important;
+    color: #ffffff!important;
+}
+
 
 /*buttons*/
 .btn-outline{
@@ -93,8 +119,8 @@ border-radius: 6px;
 }
 
 .btn-select-option:hover{
-background-color: #24A2E8;
-border: solid 2px #24A2E8;
+background-color: #24A2E8!important;
+border: solid 2px #24A2E8!important;
 color: #ffffff;
 }
 
@@ -102,6 +128,11 @@ color: #ffffff;
 background-color: #24A2E8;
 color: #ffffff;
 border: solid 2px #000000;
+}
+
+.form-check-input[type=radio] {
+    border-radius: 50%;
+    border: solid 2px #000000;
 }
 
 /*inputs*/
@@ -149,6 +180,15 @@ letter-spacing: 1.5px;
 #basic-nav-dropdown{
 min-width: 160px;
 }
+.nav-link {
+    color: #000;
+}
+.text-info {
+    --bs-text-opacity: 1;
+    color: #000 !important;
+    font-size: 30px;
+    font-family: 'Anton';
+}
 
 /*workout*/
 /* Estilos para el elemento select */
@@ -156,8 +196,8 @@ min-width: 160px;
 -webkit-appearance: none;
 -moz-appearance: none;
 appearance: none; 
-padding: 10px;
-border: 1px solid #ccc;
+padding: 6px 0px 6px 10px;
+border: 1px solid #000000;
 border-radius: 5px; 
 background-color: #fff; 
 font-size: 16px;
@@ -369,6 +409,19 @@ font-size: 35px;
 letter-spacing: 2.5px;
 font-family: "Anton", sans-serif;
 margin:auto;
+}
+
+.calories, .duration{
+    width: 150px;
+    background-color: #f8f8f8;
+    height: 150px;
+    border-radius: 8px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom:20px
 }
 
 .relative{
