--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -191,7 +191,7 @@ min-width: 160px;
 }
 
 /*workout*/
-/* Estilos para el elemento select */
+/* css select */
 .select-custom {
 -webkit-appearance: none;
 -moz-appearance: none;
